# orquestra-cli

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  SKILL.md  install.sh
.github/skills/orquestra-cli/: SKILL.md
.github/workflows/: ci.yml  release.yml
Formula/: orquestra-cli.rb
scripts/: update_formula.py
src/: api.rs  cli.rs  config.rs  idl.rs  interactive.rs  main.rs  solana.rs
